<resources>
    <string name="app_name">Android Navigation Drawer</string>
    <string name="m_home">Home</string>
    <string name="m_contact">Contact</string>
    <string name="m_settings">Settings</string>
    <string name="m_notification">Notification</string>
    <string name="m_share">Share</string>
    <string name="s_title">www.imranalam.in</string>
    <string name="nav_draw_open">Nav Draw Open</string>
    <string name="nav_draw_close">Nav Draw Close</string>
</resources>
